# kernel

./: .arclint  .gitignore  MAINTAINERS  Makefile  __mk_palladium.sh  build.sh  build_boot_image.sh  commit-msg  crc.py  img2ddrmem.sh  mk_kernel.sh  mk_palladium_dtb_fpga.sh  mk_palladium_dtb_palladium.sh  mk_soc.sh  mk_usb.sh  pre-commit
Documentation/kbuild/: kbuild.txt
Documentation/usb/: gadget-testing.txt
arch/arm64/: Kconfig  Kconfig.platforms  Makefile
certs/: signing_key.pem  signing_key.x509
crypto/: ahash.c  cipher.c  testmgr.c  testmgr.h  xor.c
drivers/: Kconfig  Makefile  part
drivers/bifsd/: Kconfig  Makefile  notify.c  x2_bifsd.c  x2_bifsd.h
drivers/bluetooth/: Kconfig  Makefile
drivers/char/: Kconfig  Makefile  hobot_bifspi.c  mem.c  x2_bifspi.c
drivers/clk/: Kconfig  Makefile  clk-divider.c
drivers/clocksource/: Kconfig  Makefile  timer-hobot.c  timer_hobot.c  timer_x2.c  x2_timer.c
drivers/cpufreq/: cpufreq-dt-platdev.c  cpufreq.c
drivers/crypto/: Kconfig  Makefile
drivers/crypto/synopsys/driver/src/pka/user/engine/: .gitignore  Makefile.am  configure.ac  simpletest.cnf  simpletest.sh
drivers/crypto/synopsys/driver/src/pka/user/engine/m4/: libpkauser.m4
drivers/crypto/synopsys/driver/src/pka/user/engine/src/: pka-engine.c
fs/: Kconfig  Makefile  ioctl.c
init/: Kconfig  do_mounts.c  do_mounts.h  do_mounts_dm.c  initramfs.c
kernel/: hung_task.c  kexec_core.c  kthread.c  module.c  notifier.c  panic.c  smp.c  softirq.c  sysctl.c  watchdog.c
net/: Kconfig  Makefile
scripts/: Makefile.lib  Makefile.modinst  setlocalversion
(+2262 files in other folders)
